# python-intermediate-inflammation

./: README.md  inflammation-analysis.py  pyproject.toml
inflammation/: compute_data.py  models.py  test_compute_data.py
tests/: test_models.py
